# gitaly-rs

./: .gitignore  Cargo.toml  README.md  USER_GUIDE.md
.aidocs/: plan.md
.github/workflows/: test-matrix.yml
benches/: stress_repository_exists.rs  stress_repository_metadata.rs  stress_server_info.rs
bins/: gitaly-backup.rs  gitaly-blackbox.rs  gitaly-gpg.rs  gitaly-hooks.rs  gitaly-lfs-smudge.rs  gitaly-ssh.rs  helper_stub.rs
crates/gitaly/: Cargo.toml
crates/gitaly-auth/: Cargo.toml
crates/gitaly-auth/src/: lib.rs
crates/gitaly-cgroups/: Cargo.toml
crates/gitaly-cgroups/src/: lib.rs  manager.rs
crates/gitaly-cluster/: Cargo.toml
crates/gitaly-cluster/src/: lib.rs
crates/gitaly-config/: Cargo.toml
crates/gitaly-config/src/: lib.rs
crates/gitaly-error/: Cargo.toml
crates/gitaly-error/src/: lib.rs
crates/gitaly-gateway/: Cargo.toml  gateway.toml.example
crates/gitaly-gateway/src/: lib.rs  main.rs
crates/gitaly-gateway/tests/: e2e.rs
crates/gitaly-git/: Cargo.toml
crates/gitaly-git/src/: catfile.rs  command.rs  command_factory.rs  hooks.rs  lib.rs  object_id.rs  packfile.rs  pipeline.rs  pktline.rs  quarantine.rs  reference.rs  repository.rs
crates/gitaly-git/tests/: repository_capabilities.rs
crates/gitaly-limiter/: Cargo.toml
crates/gitaly-limiter/src/: adaptive.rs  concurrency.rs  lib.rs
crates/gitaly-limiter/src/watchers/: cpu.rs  memory.rs  mod.rs
crates/gitaly-proto/: Cargo.toml  build.rs
crates/gitaly-proto/src/: lib.rs
crates/gitaly-server/: Cargo.toml
crates/gitaly-server/examples/: smoke_client.rs
crates/gitaly-server/src/: dependencies.rs  lib.rs  runtime.rs  server.rs
crates/gitaly-server/src/cache/: mod.rs  stream.rs
crates/gitaly-server/src/middleware/: auth.rs  cache_invalidation.rs  correlation_id.rs  limiting.rs  log_fields.rs  logging.rs  metrics.rs  mod.rs  panic.rs  request_info.rs  sentry.rs  sidechannel.rs  status.rs
crates/gitaly-server/src/service/: analysis.rs  blob.rs  cleanup.rs  commit.rs  diff.rs  hook.rs  mod.rs  objectpool.rs  operations.rs  partition.rs  raft.rs  ref_.rs  remote.rs  repository.rs  server.rs  smarthttp.rs  ssh.rs
crates/gitaly-storage/: Cargo.toml
crates/gitaly-storage/src/: counter.rs  keyvalue.rs  lib.rs  locator.rs  partition.rs  snapshot.rs  transaction.rs  wal.rs
crates/gitaly/src/: main.rs
docker/: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  mirror-local-repos.sh
docker/config/: gateway.toml  gitaly-rs.toml
docs/: stress-gate.md
docs/plans/: 2026-02-25-docker-forge-design.md  2026-02-25-docker-forge.md
proto/: smarthttp.proto  ssh.proto
proto/raftpb/: raft.proto
scripts/: run-stress-suite.sh  stage-binaries.sh
src/: lib.rs  main.rs
tasks/: gitaly-client-reference.md
tests/: chaos_stream_shutdown.rs  integration_server_info.rs  integration_server_surfaces.rs
tests/support/: mod.rs
