[package]
name = "gitaly-rs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[workspace]
members = [
  ".",
  "crates/gitaly-git",
  "crates/gitaly-storage",
  "crates/gitaly-limiter",
  "crates/gitaly-cgroups",
  "crates/gitaly-auth",
  "crates/gitaly-config",
  "crates/gitaly-error",
  "crates/gitaly-server",
  "crates/gitaly-proto",
  "crates/gitaly-gateway",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.83"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
hmac = "0.12"
prost = "0.13"
redb = "2.4"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1.44", features = ["macros", "process", "rt-multi-thread", "time"] }
tokio-stream = "0.1"
tonic = "0.12"
tonic-build = "0.12"
prost-build = "0.13"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
russh = "0.57"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
gitaly-config = { path = "crates/gitaly-config" }
gitaly-server = { path = "crates/gitaly-server" }
tokio = { workspace = true, features = ["signal"] }
