[package]
name = "gitaly-cluster"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
gitaly-proto = { path = "../gitaly-proto" }
openraft.workspace = true
prost.workspace = true
serde.workspace = true
serde_json = "1.0"
