[package]
name = "gitaly-gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
gitaly-proto = { path = "../gitaly-proto" }
serde.workspace = true
tokio = { workspace = true, features = ["signal", "net", "sync", "io-util"] }
tokio-stream.workspace = true
toml.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
russh.workspace = true

[dev-dependencies]
gitaly-server = { path = "../gitaly-server" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "process", "fs"] }
