[package]
name = "gitaly-git"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
base64.workspace = true
serde.workspace = true
serde_json = "1.0"
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
sha1 = "0.10"
