[package]
name = "gitaly-limiter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
gitaly-cgroups = { path = "../gitaly-cgroups" }
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
