[package]
name = "gitaly-proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
prost.workspace = true
prost-types = "0.13"
tonic.workspace = true

[build-dependencies]
prost-build.workspace = true
tonic-build.workspace = true

[lints]
workspace = true
