[package]
name = "gitaly-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
gitaly-cgroups = { path = "../gitaly-cgroups" }
gitaly-config = { path = "../gitaly-config" }
gitaly-limiter = { path = "../gitaly-limiter" }
gitaly-proto = { path = "../gitaly-proto" }
thiserror.workspace = true
tonic.workspace = true

[dev-dependencies]
tokio.workspace = true
