[package]
name = "gitaly-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
gitaly-cgroups = { path = "../gitaly-cgroups" }
gitaly-config = { path = "../gitaly-config" }
gitaly-git = { path = "../gitaly-git" }
gitaly-limiter = { path = "../gitaly-limiter" }
gitaly-proto = { path = "../gitaly-proto" }
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
