[package]
name = "gitaly"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
gitaly-rs = { path = "../.." }
gitaly-gateway = { path = "../gitaly-gateway" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
